Removed recording of sub aggregates.